Fix header visual problem on small screens - remove table + use div + edit css

--- a/style.css
+++ b/style.css
@@ -157,3 +157,35 @@ max-width: 100%;
 .tax-thumbnail-image {
 width: 50%; /* Μικρό μέγεθος εικόνας */
 }
+
+.header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 100%;
+}
+
+header div > * {
+    max-width: 100%;
+}
+
+header div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+@media (max-width: 600px) {
+    header div {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #search-container,
+    #navpath-section,
+    .container {
+        width: 100%;
+        text-align: center;
+    }
+}
